--- a/Orderpage.html
+++ b/Orderpage.html
@@ -135,7 +135,7 @@
 	<div class="footer parent">
 		<div class="child">
 			<div class="footer__left">
-				<div class="footer__left--name">Porfumelus</div>
+				<div class="footer__left--name">Havuyi</div>
 				<div class="footer__left--slogan">Kích thích mọi giác quan<br> với hương thơm đẳng cấp.</div>
 				<div class="footer__left--social">
 					<a href="https://www.facebook.com"><button class="footer__left--socialbtn"><img src="svg/facebook.svg"></img></button></a>
@@ -182,7 +182,7 @@
 		</div>
 	</div>
 	<!-- Footer ENDS -->
-	<script src="order.js"></script>
+	<!-- <script src="order.js"></script> -->
 </body>
 
 </html>
