--- a/ProductDetail2.html
+++ b/ProductDetail2.html
@@ -223,30 +223,27 @@
 	<div class="recommendation">
 			<h2>Những sản phẩm tương tự</h2>
 			<div class="box">
-				<div class="product__item outline">
-					<div class="product__item--img"></div>
+				<div class="product__item outline"><a href="ProductDetail.html">
+					<div class="product__item--img"><img src="img/img9.jpg"></div>
 					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-					<div class="product__item--quickview">Xem nhanh</div> 
-				</div>
-				<div class="product__item outline">
-					<div class="product__item--img"></div>
+				</a></div>
+				<div class="product__item outline"><a href="ProductDetail.html">
+					<div class="product__item--img"><img src="img/img13.jpg"></div>
 					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-					<div class="product__item--quickview">Xem nhanh</div> 
-				</div>
-				<div class="product__item outline">
-					<div class="product__item--img"></div>
+				</a></div>
+				<div class="product__item outline"><a href="ProductDetail.html">
+					<div class="product__item--img"><img src="img/img15.jpg"></div>
 					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
-					<div class="product__item--quickview">Xem nhanh</div> 
-				</div>
+				</a></div>
 			</div>
 	</div>
 	<div class="product__modal__cart__container">
@@ -314,8 +311,8 @@
 		<div class="footer__terms">2023 all Right Reserved Term of use Porfumelus</div>
 	</div>
 </div>
-<script  src="index.js"></script>
-<script src="detail.js"></script>
+<!-- <script  src="index.js"></script>
+<script src="detail.js"></script> -->
 </body>
 
 </html>
