--- a/admin/dongthemsp.html
+++ b/admin/dongthemsp.html
@@ -8,7 +8,7 @@
     
     <!----======== CSS ======== -->
     <!-- <link rel="stylesheet" href="style.css"> -->
-     <link rel="stylesheet" href="quanlisanpham.css">
+     <link rel="stylesheet" href="themsanpham.css">
     <!----===== Iconscout CSS ===== -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <script src="https://kit.fontawesome.com/6bddc9f4be.js" crossorigin="anonymous"></script>
@@ -61,10 +61,11 @@
             <i class="uil uil-bars sidebar-toggle"></i>
 
             <div class="search-box">
-                <a href="timsp.html" class="uil uil-search"></a>
+                <a href="search.html" class="uil uil-search"></a>
                 <input type="text" placeholder="Search here...">
+                <button class="color addproducticon">Thêm sản phẩm</button>
             </div>
-            <a href="themsanpham.html"><button class="color addproducticon">Thêm sản phẩm</button></a>
+            
             <img src="img/profile.jpg" alt="">
         </div>
         <div class="dash-content">
@@ -77,7 +78,7 @@
         </div>
     </section>
     <div class="container">
-        <div id="iconclose"><i class="fa-solid fa-x"></i></div>
+        <div id="iconclose"><a href="quanlysanphamadmin.html"><i class="fa-solid fa-x"></i></a></div>
         <h1>Thêm Sản Phẩm</h1>
         <form action="#" class="formdiv">
           <div class="form-group">
@@ -261,24 +262,24 @@
           </thead>
           <tbody>
             <tr class="columnn">
-                <td><img src="img/img11.jpg"></td>
-                <td>6</td>
-                <td>Nước Hoa Dior Sauvage Parfum</td>
-                <td>Dior</td>
+                <td><img src="img/img1.jpg"></td>
+                <td>1</td>
+                <td>Nước Hoa Louis Vuitton Heures DAbsence EDP</td>
+                <td>Louis Vuitton</td>
                 <td>Hương hoa cỏ, gỗ xạ hương</td>
                 <td>4-6h</td>
                 <td>50ml</td>
                 <td>1.980.000đ</td>
                 <td >
-                <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>  </a> 
+                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
                 <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
                 </td>
               </tr>
           </tbody>
           <tbody>
             <tr class="columnn">
-                <td><img src="img/img13.jpg"></td>
-                <td>7</td>
+                <td><img src="img/img3.jpg"></td>
+                <td>2</td>
                 <td>Nước Hoa Tom Ford Cafe Rose</td>
                 <td>Louis Vuitton</td>
                 <td>Hương hoa cỏ, gỗ xạ hương</td>
@@ -286,55 +287,55 @@
                 <td>50ml</td>
                 <td>6.910.000đ</td>
                 <td >
-                  <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i></a>   
+                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
                 <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
                 </td>
               </tr>
           </tbody>
           <tbody>
             <tr class="columnn">
-                <td><img src="img/img15.jpg"></td>
-                <td>8</td>
-                <td>Nước Hoa Louis Vuitton Heures DAbsence EDP</td>
-                <td>Gucci</td>
+                <td><img src="img/img5.jpg"></td>
+                <td>3</td>
+                <td>Nước Hoa Dior Sauvage Parfum</td>
+                <td>Calvin Klein</td>
                 <td>Hương hoa cỏ, gỗ xạ hương</td>
                 <td>3-4h</td>
                 <td>50ml</td>
                 <td>3.750.000đ</td>
                 <td >
-                  <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i> </a>  
+                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
                 <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
                 </td>
               </tr>
           </tbody>
           <tbody>
             <tr class="columnn">
-                <td><img src="img/img17.jpg"></td>
-                <td>9</td>
+                <td><img src="img/img7.jpg"></td>
+                <td>4</td>
                 <td>Nước Hoa Louis Vuitton Heures DAbsence EDP</td>
-                <td>Gucci</td>
+                <td>Tom Ford</td>
                 <td>Hương hoa cỏ, gỗ xạ hương</td>
                 <td>7-9h</td>
                 <td>50ml</td>
                 <td>11.980.000đ</td>
                 <td >
-                  <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i> </a>  
+                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
                 <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
                 </td>
               </tr>
           </tbody>
           <tbody>
             <tr class="columnn">
-                <td><img src="img/img19.jpg"></td>
-                <td>10</td>
-                <td>Nước Hoa Dior Sauvage Parfum</td>
+                <td><img src="img/img9.jpg"></td>
+                <td>5</td>
+                <td>Nước Hoa Louis Vuitton Heures DAbsence EDP</td>
                 <td>Louis Vuitton</td>
                 <td>Hương hoa cỏ, gỗ xạ hương</td>
                 <td>2-6h</td>
                 <td>50ml</td>
                 <td>4.720.000đ</td>
                 <td >
-                  <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i></a>   
+                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
                 <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
                 </td>
               </tr>
@@ -345,10 +346,9 @@
           <p class="textnoproductfound">Không tìm thấy sản phẩm!</p>
         </div>
         <div class="phantrangaddproduct">
-          <button class="myButton"><a href="quanlysanphamadmin.html">1</a></button>
-          <button class="myButton active"><a href="quanlysanphamadmin2.html">2</a></button>
+          <button class="myButton active"><a href="quanlysanphamadmin.html">1</a></button>
+          <button class="myButton"><a href="quanlysanphamadmin2.html">2</a></button>
         </div>
       </section>
       <!-- <script src="quanlisanpham.js"></script> -->
-      <script src="quanlisp.js"></script>
 </body>
