--- a/admin/quanlysanphamadmin.html
+++ b/admin/quanlysanphamadmin.html
@@ -61,11 +61,10 @@
             <i class="uil uil-bars sidebar-toggle"></i>
 
             <div class="search-box">
-                <a href="search.html" class="uil uil-search"></a>
+                <a href="timsp.html" class="uil uil-search"></a>
                 <input type="text" placeholder="Search here...">
-                <button class="color addproducticon">Thêm sản phẩm</button>
             </div>
-            
+          <a href="themsanpham.html"><button class="color addproducticon">Thêm sản phẩm</button></a>
             <img src="img/profile.jpg" alt="">
         </div>
         <div class="dash-content">
@@ -271,7 +270,7 @@
                 <td>50ml</td>
                 <td>1.980.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
+                <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i> </a>  
                 <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
                 </td>
               </tr>
@@ -287,7 +286,7 @@
                 <td>50ml</td>
                 <td>6.910.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
+                  <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i></a>   
                 <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
                 </td>
               </tr>
@@ -303,7 +302,7 @@
                 <td>50ml</td>
                 <td>3.750.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
+                  <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i> </a>  
                 <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
                 </td>
               </tr>
@@ -319,7 +318,7 @@
                 <td>50ml</td>
                 <td>11.980.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
+                  <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i> </a>  
                 <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
                 </td>
               </tr>
@@ -335,7 +334,7 @@
                 <td>50ml</td>
                 <td>4.720.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
+                  <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   </a>
                 <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
                 </td>
               </tr>
@@ -350,5 +349,6 @@
           <button class="myButton"><a href="quanlysanphamadmin2.html">2</a></button>
         </div>
       </section>
-      <script src="quanlisanpham.js"></script>
+      <!-- <script src="quanlisanpham.js"></script> -->
+      <script src="quanlisp.js"></script>
 </body>
