--- a/button1.html
+++ b/button1.html
@@ -47,7 +47,7 @@
 					<li><a>Liên Hệ</a></li>
 				</ul>
 				<ul>
-					<div class="user" style="display: none;">
+					<div class="user">
 						<div class="borderuser">
 							<li>
 								<div class="usersection">Xin chào,user</div>
@@ -67,13 +67,13 @@
 							<li class="adminsection logout"><a>| Đăng xuất</a></li>
 						</div>
 					</div>
-					<div class="nonuser">
+					<div class="nonuser"style="display: none;">
 						<div class="bordernonuser">
 							<li>
-								<div class="dangnhap"><a href="dangnhap.html">Đăng nhập</a></div>
+								<div class="dangnhap">Đăng nhập</div>
 							</li>
 							<li>
-								<div class="dangky"><a href="dangky.html">| Đăng ký</a></div>
+								<div class="dangky">| Đăng ký</div>
 							</li>
 						</div>
 					</div>
@@ -84,10 +84,12 @@
 					<div class="nav__logo--icon"> <img src="img/logo.png" alt="logo" class="nav__logo--icon"></div>
 					<div class="nav__logo--name">Havuyi</div>
 				</div>
+				<form class="nav__search outline" onsubmit="return false;">
 					<input class="nav__search--input" type="text" placeholder="Tìm kiếm sản phẩm...">
-					<a href="indexfind.html"><button class="nav__search--btn outline" type="submit"><img src="svg/magnifying_glass.svg"
-							width="22px" height="22px"></button></a>
-				<div class="nav__cart"><a href="indexgiohang.html"><img src="svg/cart.svg" width="39px" height="39px"></img></a></div>
+					<button class="nav__search--btn outline" type="submit"><img src="svg/magnifying_glass.svg"
+							width="22px" height="22px"></img></i></button>
+				</form>
+				<div class="nav__cart"><img src="svg/cart.svg" width="39px" height="39px"></img></div>
 			</div>
 		</div>
 	</div>
@@ -203,7 +205,7 @@
 				<div class="product__filter outline">
 					<div class="product__filter--brand">
 						<h1>Theo hãng</h1>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Dior</a></button>
+						<button class="product__filter--btn outline brand active"><a href="button1.html">Dior</a></button>
 						<button class="product__filter--btn outline brand"><a href="button1.html">Louis Vulton</a></button>
 						<button class="product__filter--btn outline brand"><a href="button1.html">Tom Ford</a></button>
 						<button class="product__filter--btn outline brand"><a href="button1.html">Gucci</a></button>
@@ -222,7 +224,7 @@
 						<h3>Khoảng giá</h2>
 							<input class="product__filter--input outline from" type="text" placeholder="Từ">
 							<input class="product__filter--input outline to" type="text" placeholder="Đến">
-							<div class="findPrice"><a href="indexfind.html">Tìm Kiếm</a></div>
+							<div class="findPrice">Tìm Kiếm</div>
 					</div>
 					<div class="product__filer--rating">
 						<h1>Theo đánh giá</h1>
@@ -300,9 +302,8 @@
 			</div>
 			<div class="product__pagination">
 				<!-- <a href="#">&laquo;</a> -->
-				<a href="index.html" class="active">1</a>
-				<a href="indextrang2.html">2</a>
-				<a href="indextrang3.html">3</a>
+				<a href="button1.html" class="active">1</a>
+				<a href="button2.html">2</a>
 				<!-- <a href="#">&raquo;</a> -->
 			</div>
 		</div>
@@ -311,12 +312,10 @@
 				<div class="product__modal__cart__title">
 					<h3>GIỎ HÀNG CỦA BẠN</h3>
 					<div class="product__modal__cart__close">
-						<a href="index.html">
 						<script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
 						<img src="svg/x.svg" width="16px" height="16px"
 							colors="primary:#7047ee,secondary:#7047ee" style="width:100px">
 						</img>
-					</a>
 					</div>
 				</div>
 				<div class="product__modal__cart__content">
