--- a/ProductDetail.html
+++ b/ProductDetail.html
@@ -259,7 +259,6 @@
 					</div>
 			</div>
 			<div class="product__modal__cart__content">
-				Cart modal render by js
 			</div>
 		</div>
 	</div>
@@ -311,8 +310,8 @@
 		<div class="footer__terms">2023 all Right Reserved Term of use Porfumelus</div>
 	</div>
 </div>
-<script  src="index.js"></script>
-<script src="detail.js"></script>
+<!-- <script  src="index.js"></script>
+<script src="detail.js"></script> -->
 </body>
 
 </html>
