--- a/admin/timsp.html
+++ b/admin/timsp.html
@@ -245,6 +245,7 @@
                   </select> -->
         </div>
         <!-- <i class="fa-thin fa-magnifying-glass"></i> -->
+        <div class="ket-qua">kết quả tìm thấy</div>
         <table class="tables">
           <thead>
             <tr class="column">
@@ -261,24 +262,24 @@
           </thead>
           <tbody>
             <tr class="columnn">
-                <td><img src="img/img11.jpg"></td>
-                <td>6</td>
-                <td>Nước Hoa Dior Sauvage Parfum</td>
-                <td>Dior</td>
+                <td><img src="img/img1.jpg"></td>
+                <td>1</td>
+                <td>Nước Hoa Louis Vuitton Heures DAbsence EDP</td>
+                <td>Louis Vuitton</td>
                 <td>Hương hoa cỏ, gỗ xạ hương</td>
                 <td>4-6h</td>
                 <td>50ml</td>
                 <td>1.980.000đ</td>
                 <td >
-                <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>  </a> 
+                <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i> </a>  
                 <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
                 </td>
               </tr>
           </tbody>
           <tbody>
             <tr class="columnn">
-                <td><img src="img/img13.jpg"></td>
-                <td>7</td>
+                <td><img src="img/img3.jpg"></td>
+                <td>2</td>
                 <td>Nước Hoa Tom Ford Cafe Rose</td>
                 <td>Louis Vuitton</td>
                 <td>Hương hoa cỏ, gỗ xạ hương</td>
@@ -293,10 +294,10 @@
           </tbody>
           <tbody>
             <tr class="columnn">
-                <td><img src="img/img15.jpg"></td>
-                <td>8</td>
-                <td>Nước Hoa Louis Vuitton Heures DAbsence EDP</td>
-                <td>Gucci</td>
+                <td><img src="img/img5.jpg"></td>
+                <td>3</td>
+                <td>Nước Hoa Dior Sauvage Parfum</td>
+                <td>Calvin Klein</td>
                 <td>Hương hoa cỏ, gỗ xạ hương</td>
                 <td>3-4h</td>
                 <td>50ml</td>
@@ -309,10 +310,10 @@
           </tbody>
           <tbody>
             <tr class="columnn">
-                <td><img src="img/img17.jpg"></td>
-                <td>9</td>
+                <td><img src="img/img7.jpg"></td>
+                <td>4</td>
                 <td>Nước Hoa Louis Vuitton Heures DAbsence EDP</td>
-                <td>Gucci</td>
+                <td>Tom Ford</td>
                 <td>Hương hoa cỏ, gỗ xạ hương</td>
                 <td>7-9h</td>
                 <td>50ml</td>
@@ -325,16 +326,16 @@
           </tbody>
           <tbody>
             <tr class="columnn">
-                <td><img src="img/img19.jpg"></td>
-                <td>10</td>
-                <td>Nước Hoa Dior Sauvage Parfum</td>
+                <td><img src="img/img9.jpg"></td>
+                <td>5</td>
+                <td>Nước Hoa Louis Vuitton Heures DAbsence EDP</td>
                 <td>Louis Vuitton</td>
                 <td>Hương hoa cỏ, gỗ xạ hương</td>
                 <td>2-6h</td>
                 <td>50ml</td>
                 <td>4.720.000đ</td>
                 <td >
-                  <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i></a>   
+                  <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   </a>
                 <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
                 </td>
               </tr>
@@ -345,8 +346,8 @@
           <p class="textnoproductfound">Không tìm thấy sản phẩm!</p>
         </div>
         <div class="phantrangaddproduct">
-          <button class="myButton"><a href="quanlysanphamadmin.html">1</a></button>
-          <button class="myButton active"><a href="quanlysanphamadmin2.html">2</a></button>
+          <button class="myButton active"><a href="quanlysanphamadmin.html">1</a></button>
+          <button class="myButton"><a href="quanlysanphamadmin2.html">2</a></button>
         </div>
       </section>
       <!-- <script src="quanlisanpham.js"></script> -->
